--- a/main.css
+++ b/main.css
@@ -1,1 +1,48 @@
-/* ADD YOUR STYLES HERE */
+.horizspace {
+	display:flex;
+	justify-content: center;
+}
+
+.horizspace img{
+	padding: 20px;
+}
+
+.horizspace2 > *{
+	display: inline-block;
+	position:relative;
+	vertical-align: top;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.vertspace {
+	padding-bottom: 10%;
+	padding-top: 10%;
+}
+
+.vertspace2 {
+	padding-bottom: 5%;
+	padding-top: 5%;
+}
+
+.horizlist{
+	padding: 0;
+}
+
+.horizlist > *{
+	display: inline;
+	float: left;
+	padding: 0;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
