--- a/main.css
+++ b/main.css
@@ -36,13 +36,41 @@
 	
 }
 
+.buttons1 a{
+	background-color: pink;
+	border-radius: 9px;
+	color: white;
+}
 
+.b1 {
+	padding-left: 60px;
+	padding-right: 60px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-decoration: none;
+	font-size: 30px;
+	display: inline-block;
+}
 
+.b2 {
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-decoration: none;
+	font-size: 15px;
+	display: inline-block;
+}
 
-
-
-
-
+.b3 {
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	text-decoration: none;
+	font-size: 15px;
+	display: inline-block;
+}
 
 
 
